2013-09-23
* check beforehand whether or not a result needs to be pruned.
* licenseversion.py: don't convert sets back to lists in prune(). Also replace
this in several other files. It can save quite some time as detailed in the
comments of this post:
https://plus.google.com/115212051037621986145/posts/HajXHPGN752

2013-09-22
* don't copy reports and images to a temporary location if 'cleanup' is set
but directly write them to the final destination.
* verify and tag ODEX files

2013-09-21
* licenseversion.py: skip equivalent versions (same identifiers) in pruning
* licenseversion.py: shorter loops in pruning by removing unneeded data earlier
* generatereports.py: write results of unique result snippets to disk directly
without keeping them in memory

2013-09-20
* licenseversion.py: replace processing files in parallel with processing
results per file in parallel. In case of one or a few large result files (like
the Linux kernel) this is much more efficient.
* don't write results back to disk that don't need to be written back to disk
because they have not been changed.
* licenseversion.py: rework pruning (select fewer values)

2013-09-19
* replace Pool.map() with a few queues for unpacking to have better
interleaving of scans for unpacking.

2013-09-18
* pass unpacktempdir to aggregate scans so temporary files are packed in the
right location
* finish option to ignore files with certain extensions

2013-09-17
* easier notation for marking node types in findlibs.py.
* add some sanity checks for LZMA: after the magic header not all bytes are
allowed, so filter out the ones that are not used in practice. For some files
(like in the ASUS Padfone 2 firmware) this means a big reduction in time spent
scanning.

2013-09-16
* clean up more code of ranking.py, remove all traces of using main database
from it.
* add new 'extensionsignore' option for unpack scans and leaf scans for
ignoring files with a certain extension. This is useful for for example